package sample;

interface ConfigInterface {
    String getId();
    String getUser();
    String getPassword();
}
